crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__integer_strict_failure_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#1 : Data = iData (trace "operand" in 42) in
let effect#3 : int = trace "between" in 0 in
case@Data data#1 of
  DataI payload#2 -> trace "selected" in 9
--- unoptimized UPLC
(program 1.1.0
  [(lam data_1
    [(lam effect_3
      [(lam generated_4
        (force
          [[[[[[(force (builtin chooseData)) generated_4] (delay (error))] (delay (error))]
            (delay (error))]
            (delay
              (force
                [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))]
            (delay (error))]))
        data_1])
      (force
        [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
    [(builtin iData)
      (force
        [[(force (builtin trace)) (con string "operand")] (delay (con integer 42))])]])
--- optimized Core
let anf#7 : int = trace "operand" in 42 in
let data#4 : Data = iData anf#7 in
let effect#5 : int = trace "between" in 0 in
trace "selected" in 9
--- optimized UPLC
(program 1.1.0
  [(lam builtin_4
    [(lam anf_1
      [(lam data_2
        [(lam effect_3
          (force [[builtin_4 (con string "selected")] (delay (con integer 9))]))
          (force [[builtin_4 (con string "between")] (delay (con integer 0))])])
        [(builtin iData) anf_1]])
      (force [[builtin_4 (con string "operand")] (delay (con integer 42))])])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#4 : int = trace "operand" in 42 in
let data#1 : Data = iData anf#4 in
let effect#3 : int = trace "between" in 0 in
case@Data data#1 of
  DataI payload#2 -> trace "selected" in 9
--- isolated folded Core
let anf#4 : int = trace "operand" in 42 in
let data#1 : Data = iData anf#4 in
let effect#3 : int = trace "between" in 0 in
let payload#2 : int = anf#4 in
trace "selected" in 9
--- isolated cleaned Core
let anf#4 : int = trace "operand" in 42 in
let data#1 : Data = iData anf#4 in
let effect#3 : int = trace "between" in 0 in
trace "selected" in 9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_4
    [(lam data_1
      [(lam effect_3
        [(lam generated_5
          (force
            [[[[[[(force (builtin chooseData)) generated_5] (delay (error))] (delay (error))]
              (delay (error))]
              (delay
                (force
                  [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))]
              (delay (error))]))
          data_1])
        (force
          [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
      [(builtin iData) anf_4]])
    (force
      [[(force (builtin trace)) (con string "operand")] (delay (con integer 42))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_4
    [(lam data_1
      [(lam effect_3
        (force
          [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))
        (force
          [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
      [(builtin iData) anf_4]])
    (force
      [[(force (builtin trace)) (con string "operand")] (delay (con integer 42))])])
--- result
(con integer 9)
--- logs
["operand", "between", "selected"]
