crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__integer_traced.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (trace "producer" in iData 42) of
  DataI payload#1 -> payload#1
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_2
    (force
      [[[[[[(force (builtin chooseData)) generated_2] (delay (error))] (delay (error))]
        (delay (error))]
        (delay [(lam payload_1 payload_1) [(builtin unIData) generated_2]])]
        (delay (error))]))
    (force
      [[(force (builtin trace)) (con string "producer")]
        (delay [(builtin iData) (con integer 42)])])])
--- optimized Core
let anf#3 : Data = trace "producer" in (con data (I 42)) in
case@Data anf#3 of
  DataI payload#2 -> payload#2
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam builtin_7
      [(lam anf_1
        [(lam generated_5
          (force
            (case
              (constr 0
                generated_5
                (delay (error))
                (delay (error))
                (delay (error))
                (delay [(builtin unIData) generated_5])
                (delay (error)))
              builtin_6)))
          anf_1])
        (force [[builtin_7 (con string "producer")] (delay (con data (I 42)))])])
      (force (builtin trace))])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#4 : Data = trace "producer" in iData 42 in
case@Data anf#4 of
  DataI payload#1 -> payload#1
--- isolated folded Core
let anf#4 : Data = trace "producer" in iData 42 in
case@Data anf#4 of
  DataI payload#1 -> payload#1
--- isolated cleaned Core
let anf#4 : Data = trace "producer" in iData 42 in
case@Data anf#4 of
  DataI payload#1 -> payload#1
--- isolated UPLC before
(program 1.1.0
  [(lam anf_4
    [(lam generated_5
      (force
        [[[[[[(force (builtin chooseData)) generated_5] (delay (error))] (delay (error))]
          (delay (error))]
          (delay [(lam payload_1 payload_1) [(builtin unIData) generated_5]])]
          (delay (error))]))
      anf_4])
    (force
      [[(force (builtin trace)) (con string "producer")]
        (delay [(builtin iData) (con integer 42)])])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_4
    [(lam generated_5
      (force
        [[[[[[(force (builtin chooseData)) generated_5] (delay (error))] (delay (error))]
          (delay (error))]
          (delay [(lam payload_1 payload_1) [(builtin unIData) generated_5]])]
          (delay (error))]))
      anf_4])
    (force
      [[(force (builtin trace)) (con string "producer")]
        (delay [(builtin iData) (con integer 42)])])])
--- result
(con integer 42)
--- logs
["producer"]
