crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_captured_cold_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#9 : Data = listData (trace "before" in (con (list data) [(I 42)])) in
case@Bool true of
  True -> (con (list data) [(I 42)])
  False -> force (delay (case@Data data#9 of
    DataList payload#10 -> payload#10))
--- unoptimized UPLC
(program 1.1.0
  [(lam data_9
    (case
      (con bool True)
      (force
        (delay
          [(lam generated_11
            (force
              [[[[[[(force (builtin chooseData)) generated_11] (delay (error))] (delay (error))]
                (delay [(lam payload_10 payload_10) [(builtin unListData) generated_11]])]
                (delay (error))]
                (delay (error))]))
            data_9]))
      (con (list data) [(I 42)])))
    [(builtin listData)
      (force
        [[(force (builtin trace)) (con string "before")]
          (delay (con (list data) [(I 42)]))])]])
--- optimized Core
let anf#3 : list Data = trace "before" in (con (list data) [(I 42)]) in
let data#1 : Data = listData anf#3 in
(con (list data) [(I 42)])
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam anf_2 [(lam data_4 (con (list data) [(I 42)])) [(builtin listData) anf_2]])
      (force [[builtin_5 (con string "before")] (delay (con (list data) [(I 42)]))])])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#12 : list Data = trace "before" in (con (list data) [(I 42)]) in
let data#9 : Data = listData anf#12 in
case@Bool true of
  True -> (con (list data) [(I 42)])
  False -> force (delay (case@Data data#9 of
    DataList payload#10 -> payload#10))
--- isolated folded Core
let anf#12 : list Data = trace "before" in (con (list data) [(I 42)]) in
let data#9 : Data = listData anf#12 in
case@Bool true of
  True -> (con (list data) [(I 42)])
  False -> force (delay (let payload#10 : list Data = anf#12 in
  payload#10))
--- isolated cleaned Core
let anf#12 : list Data = trace "before" in (con (list data) [(I 42)]) in
let data#9 : Data = listData anf#12 in
(con (list data) [(I 42)])
--- isolated UPLC before
(program 1.1.0
  [(lam anf_12
    [(lam data_9
      (case
        (con bool True)
        (force
          (delay
            [(lam generated_13
              (force
                [[[[[[(force (builtin chooseData)) generated_13] (delay (error))] (delay (error))]
                  (delay [(lam payload_10 payload_10) [(builtin unListData) generated_13]])]
                  (delay (error))]
                  (delay (error))]))
              data_9]))
        (con (list data) [(I 42)])))
      [(builtin listData) anf_12]])
    (force
      [[(force (builtin trace)) (con string "before")]
        (delay (con (list data) [(I 42)]))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_12
    [(lam data_9 (con (list data) [(I 42)])) [(builtin listData) anf_12]])
    (force
      [[(force (builtin trace)) (con string "before")]
        (delay (con (list data) [(I 42)]))])])
--- result
(con (list data) [(I 42)])
--- logs
["before"]
