crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_cons_used_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (mkCons (con data (I 42)) (con (list data) [])) of
  DataList payload#19 -> (con (list data) [])
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_20
    (force
      [[[[[[(force (builtin chooseData)) generated_20] (delay (error))] (delay (error))]
        (delay (con (list data) []))]
        (delay (error))]
        (delay (error))]))
    [(builtin listData)
      [[(force (builtin mkCons)) (con data (I 42))] (con (list data) [])]]])
--- optimized Core
(con (list data) [])
--- optimized UPLC
(program 1.1.0 (con (list data) []))
--- isolated pass
--- isolated ANF input
let anf#20 : list Data = mkCons (con data (I 42)) (con (list data) []) in
let anf#21 : Data = listData anf#20 in
case@Data anf#21 of
  DataList payload#19 -> (con (list data) [])
--- isolated folded Core
let anf#20 : list Data = mkCons (con data (I 42)) (con (list data) []) in
let anf#21 : Data = listData anf#20 in
let payload#19 : list Data = anf#20 in
(con (list data) [])
--- isolated cleaned Core
let anf#20 : list Data = mkCons (con data (I 42)) (con (list data) []) in
let anf#21 : Data = listData anf#20 in
(con (list data) [])
--- isolated UPLC before
(program 1.1.0
  [(lam anf_20
    [(lam anf_21
      [(lam generated_22
        (force
          [[[[[[(force (builtin chooseData)) generated_22] (delay (error))] (delay (error))]
            (delay (con (list data) []))]
            (delay (error))]
            (delay (error))]))
        anf_21])
      [(builtin listData) anf_20]])
    [[(force (builtin mkCons)) (con data (I 42))] (con (list data) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_20 [(lam anf_21 (con (list data) [])) [(builtin listData) anf_20]])
    [[(force (builtin mkCons)) (con data (I 42))] (con (list data) [])]])
--- result
(con (list data) [])
--- logs
[]
