crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_default_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (trace "operand" in (con (list data) [(I 42)])) of
  DataI wrong#11 -> trace "wrong" in error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_12
    (force
      [[[[[[(force (builtin chooseData)) generated_12] (delay (error))] (delay (error))]
        (delay (error))]
        (delay (force [[(force (builtin trace)) (con string "wrong")] (delay (error))]))]
        (delay (error))]))
    [(builtin listData)
      (force
        [[(force (builtin trace)) (con string "operand")]
          (delay (con (list data) [(I 42)]))])]])
--- optimized Core
let anf#2 : list Data = trace "operand" in (con (list data) [(I 42)]) in
let anf#3 : Data = listData anf#2 in
case@Data anf#3 of
  DataI wrong#1 -> trace "wrong" in error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_8
    [(lam builtin_9
      [(lam anf_4
        [(lam anf_5
          [(lam generated_7
            (force
              [[[[[[builtin_9 generated_7] (delay (error))] (delay (error))] (delay (error))]
                (delay (force [[builtin_8 (con string "wrong")] (delay (error))]))]
                (delay (error))]))
            anf_5])
          [(builtin listData) anf_4]])
        (force [[builtin_8 (con string "operand")] (delay (con (list data) [(I 42)]))])])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#12 : list Data = trace "operand" in (con (list data) [(I 42)]) in
let anf#13 : Data = listData anf#12 in
case@Data anf#13 of
  DataI wrong#11 -> trace "wrong" in error
--- isolated folded Core
let anf#12 : list Data = trace "operand" in (con (list data) [(I 42)]) in
let anf#13 : Data = listData anf#12 in
error
--- isolated cleaned Core
let anf#12 : list Data = trace "operand" in (con (list data) [(I 42)]) in
let anf#13 : Data = listData anf#12 in
error
--- isolated UPLC before
(program 1.1.0
  [(lam anf_12
    [(lam anf_13
      [(lam generated_14
        (force
          [[[[[[(force (builtin chooseData)) generated_14] (delay (error))] (delay (error))]
            (delay (error))]
            (delay (force [[(force (builtin trace)) (con string "wrong")] (delay (error))]))]
            (delay (error))]))
        anf_13])
      [(builtin listData) anf_12]])
    (force
      [[(force (builtin trace)) (con string "operand")]
        (delay (con (list data) [(I 42)]))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_12 [(lam anf_13 (error)) [(builtin listData) anf_12]])
    (force
      [[(force (builtin trace)) (con string "operand")]
        (delay (con (list data) [(I 42)]))])])
--- result
error: ExplicitErrorTerm
--- logs
["operand"]
